Changed recipe class for almond cookies

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="chocolate.html">Try this recipe ></a>
       </div>
     </article>
-    <article class="recipe butter non-dairy">
+    <article class="recipe butter">
       <h3>Butter Cookies</h3>
       <div class="recipe-picture">
         <img src="images/butter-cookies.jpg" alt="cookie">
@@ -44,7 +44,7 @@
         <a href="#">Try this recipe ></a>
       </div>
     </article>
-    <article class="recipe almond">
+    <article class="recipe almond non-dairy">
       <h3>Almond Cookies</h3>
       <div class="recipe-picture">
         <img src="images/almond-cookies.jpg" alt="cookie">
