changed description of almond recipe

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <img src="images/almond-cookies.jpg" alt="cookie">
       </div>
       <div class="recipe-description">
-        <p>These lovely, rustic gluten free cookies are perfect for dunking in tea or a cold glass of milk.</p>
+        <p>These lovely, rustic gluten free cookies are perfect for dunking in tea or a cold glass of your favorite non-dairy beverage because you are severely lactose intolerant.</p>
         <a href="#">Try this recipe ></a>
       </div>
     </article>
